// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainExplorerListDomains Component test cases Assertions 1`] = `
<DomainExplorerListDomains>
  <EmptyState
    data-ouia-component-type="domain-explorer-list-domains"
    data-ouia-safe={true}
    variant="full"
  >
    <div
      className="pf-c-empty-state"
      data-ouia-component-type="domain-explorer-list-domains"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-empty-state__content"
      >
        <EmptyStateIcon
          icon={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "aria-hidden": "true",
                    "className": "pf-c-empty-state__icon",
                    "color": "currentColor",
                    "noVerticalAlign": false,
                    "size": "sm",
                  },
                  Object {},
                ],
                Array [
                  Object {
                    "aria-hidden": "true",
                    "className": "pf-c-empty-state__icon",
                    "color": "currentColor",
                    "noVerticalAlign": false,
                    "size": "sm",
                  },
                  Object {},
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
        >
          <CubesIcon
            aria-hidden="true"
            className="pf-c-empty-state__icon"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </EmptyStateIcon>
        <Title
          headingLevel="h5"
          size="lg"
        >
          <h5
            className="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe={true}
          >
            Domains List
          </h5>
        </Title>
        <EmptyStateBody>
          <div
            className="pf-c-empty-state__body"
          >
            Select a domain below
          </div>
        </EmptyStateBody>
        <EmptyStateSecondaryActions>
          <div
            className="pf-c-empty-state__secondary"
          >
            <Link
              key="0"
              to="/DomainExplorer/Travels"
            >
              <LinkAnchor
                href="/DomainExplorer/Travels"
                navigate={[Function]}
              >
                <a
                  href="/DomainExplorer/Travels"
                  onClick={[Function]}
                >
                  <Button
                    variant="link"
                  >
                    <ButtonBase
                      innerRef={null}
                      variant="link"
                    >
                      <button
                        aria-disabled={false}
                        aria-label={null}
                        className="pf-c-button pf-m-link"
                        data-ouia-component-id="OUIA-Generated-Button-link-3"
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={false}
                        role={null}
                        type="button"
                      >
                        Travels
                      </button>
                    </ButtonBase>
                  </Button>
                </a>
              </LinkAnchor>
            </Link>
            <Link
              key="1"
              to="/DomainExplorer/visaApplication"
            >
              <LinkAnchor
                href="/DomainExplorer/visaApplication"
                navigate={[Function]}
              >
                <a
                  href="/DomainExplorer/visaApplication"
                  onClick={[Function]}
                >
                  <Button
                    variant="link"
                  >
                    <ButtonBase
                      innerRef={null}
                      variant="link"
                    >
                      <button
                        aria-disabled={false}
                        aria-label={null}
                        className="pf-c-button pf-m-link"
                        data-ouia-component-id="OUIA-Generated-Button-link-4"
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={false}
                        role={null}
                        type="button"
                      >
                        visaApplication
                      </button>
                    </ButtonBase>
                  </Button>
                </a>
              </LinkAnchor>
            </Link>
          </div>
        </EmptyStateSecondaryActions>
      </div>
    </div>
  </EmptyState>
</DomainExplorerListDomains>
`;

exports[`DomainExplorerListDomains Component test cases Snapshot with mock useGetQueryFieldsQuery 1`] = `
<DomainExplorerListDomains>
  <EmptyState
    data-ouia-component-type="domain-explorer-list-domains"
    data-ouia-safe={true}
    variant="full"
  >
    <div
      className="pf-c-empty-state"
      data-ouia-component-type="domain-explorer-list-domains"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-empty-state__content"
      >
        <EmptyStateIcon
          icon={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "aria-hidden": "true",
                    "className": "pf-c-empty-state__icon",
                    "color": "currentColor",
                    "noVerticalAlign": false,
                    "size": "sm",
                  },
                  Object {},
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
        >
          <CubesIcon
            aria-hidden="true"
            className="pf-c-empty-state__icon"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </EmptyStateIcon>
        <Title
          headingLevel="h5"
          size="lg"
        >
          <h5
            className="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe={true}
          >
            Domains List
          </h5>
        </Title>
        <EmptyStateBody>
          <div
            className="pf-c-empty-state__body"
          >
            Select a domain below
          </div>
        </EmptyStateBody>
        <EmptyStateSecondaryActions>
          <div
            className="pf-c-empty-state__secondary"
          >
            <Link
              key="0"
              to="/DomainExplorer/Travels"
            >
              <LinkAnchor
                href="/DomainExplorer/Travels"
                navigate={[Function]}
              >
                <a
                  href="/DomainExplorer/Travels"
                  onClick={[Function]}
                >
                  <Button
                    variant="link"
                  >
                    <ButtonBase
                      innerRef={null}
                      variant="link"
                    >
                      <button
                        aria-disabled={false}
                        aria-label={null}
                        className="pf-c-button pf-m-link"
                        data-ouia-component-id="OUIA-Generated-Button-link-1"
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={false}
                        role={null}
                        type="button"
                      >
                        Travels
                      </button>
                    </ButtonBase>
                  </Button>
                </a>
              </LinkAnchor>
            </Link>
            <Link
              key="1"
              to="/DomainExplorer/visaApplication"
            >
              <LinkAnchor
                href="/DomainExplorer/visaApplication"
                navigate={[Function]}
              >
                <a
                  href="/DomainExplorer/visaApplication"
                  onClick={[Function]}
                >
                  <Button
                    variant="link"
                  >
                    <ButtonBase
                      innerRef={null}
                      variant="link"
                    >
                      <button
                        aria-disabled={false}
                        aria-label={null}
                        className="pf-c-button pf-m-link"
                        data-ouia-component-id="OUIA-Generated-Button-link-2"
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={false}
                        role={null}
                        type="button"
                      >
                        visaApplication
                      </button>
                    </ButtonBase>
                  </Button>
                </a>
              </LinkAnchor>
            </Link>
          </div>
        </EmptyStateSecondaryActions>
      </div>
    </div>
  </EmptyState>
</DomainExplorerListDomains>
`;
